# mobilerobot_rl

./: README.md
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro
turtlebot3_machine_learning/turtlebot3_actor_critic/: CMakeLists.txt  package.xml  setup.py
turtlebot3_machine_learning/turtlebot3_actor_critic/launch/: turtlebot3_actor_critic_stage_1.launch
turtlebot3_machine_learning/turtlebot3_actor_critic/nodes/: turtlebot3_actor_critic_stage_1
turtlebot3_machine_learning/turtlebot3_actor_critic/src/: environment_stage_1.py  respawnGoal.py
turtlebot3_machine_learning/turtlebot3_dqn/save_model/: stage_1_20.h5  stage_1_30.h5  stage_2_10.h5
turtlebot3_machine_learning/turtlebot3_modified_dqn/: CMakeLists.txt  package.xml  setup.py
turtlebot3_machine_learning/turtlebot3_modified_dqn/launch/: result_graph.launch  turtlebot3_modified_dqn_stage_1.launch  turtlebot3_modified_dqn_stage_2.launch  turtlebot3_modified_dqn_stage_3.launch  turtlebot3_modified_dqn_stage_4.launch
turtlebot3_machine_learning/turtlebot3_modified_dqn/nodes/: turtlebot3_modified_dqn_stage_1  turtlebot3_modified_dqn_stage_2  turtlebot3_modified_dqn_stage_3  turtlebot3_modified_dqn_stage_4
turtlebot3_machine_learning/turtlebot3_modified_dqn/save_model/: stage_1_10.h5
turtlebot3_machine_learning/turtlebot3_modified_dqn/src/turtlebot3_modified_dqn/: environment_stage_1.py  respawnGoal.py
